--- a/bamboo/Vagrantfile
+++ b/bamboo/Vagrantfile
@@ -8,8 +8,10 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "bento/centos-7.3"
 
-  # Port Forwarding
+  # Networking
   config.vm.network "forwarded_port", guest: 8085, host: 8085
+  config.vm.network "private_network", ip: "192.168.11.22"
+
 
   # Sync folder
   config.vm.synced_folder ".", "/home/vagrant/bamboo", SharedFoldersEnableSymlinksCreate: false
